--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DoctorCare</title>
 </head>
-<body onscroll="onScroll()" class="menu-expended">
+<body onscroll="onScroll()" class="">
 
     <nav id="navigation" class="scroll">
         <div class="wrapper">
@@ -44,7 +44,9 @@
                 <a class="button" href="#">Agende sua consulta</a>
                 <ul class="social-links">
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100003767517947">
+                        <a 
+                        target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100003767517947">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M18 1.99997H15C13.6739 1.99997 12.4021 2.52675 11.4645 3.46444C10.5268 4.40212 10 5.67389 10 6.99997V9.99997H7V14H10V22H14V14H17L18 9.99997H14V6.99997C14 6.73475 14.1054 6.4804 14.2929 6.29286C14.4804 6.10533 14.7348 5.99997 15 5.99997H18V1.99997Z" stroke="#FFFAF1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
@@ -52,7 +54,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/LucasCBRUM">
+                        <a 
+                        target="_blank"
+                        href="https://github.com/LucasCBRUM">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37 0 0 5.37 0 12C0 17.31 3.435 21.795 8.205 23.385C8.805 23.49 9.03 23.13 9.03 22.815C9.03 22.53 9.015 21.585 9.015 20.58C6 21.135 5.22 19.845 4.98 19.17C4.845 18.825 4.26 17.76 3.75 17.475C3.33 17.25 2.73 16.695 3.735 16.68C4.68 16.665 5.355 17.55 5.58 17.91C6.66 19.725 8.385 19.215 9.075 18.9C9.18 18.12 9.495 17.595 9.84 17.295C7.17 16.995 4.38 15.96 4.38 11.37C4.38 10.065 4.845 8.985 5.61 8.145C5.49 7.845 5.07 6.615 5.73 4.965C5.73 4.965 6.735 4.65 9.03 6.195C9.99 5.925 11.01 5.79 12.03 5.79C13.05 5.79 14.07 5.925 15.03 6.195C17.325 4.635 18.33 4.965 18.33 4.965C18.99 6.615 18.57 7.845 18.45 8.145C19.215 8.985 19.68 10.05 19.68 11.37C19.68 15.975 16.875 16.995 14.205 17.295C14.64 17.67 15.015 18.39 15.015 19.515C15.015 21.12 15 22.41 15 22.815C15 23.13 15.225 23.505 15.825 23.385C18.2072 22.5807 20.2772 21.0497 21.7437 19.0074C23.2101 16.965 23.9993 14.5143 24 12C24 5.37 18.63 0 12 0Z" fill="white"/>
                             </svg>
@@ -60,7 +64,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/lucas-comparssi-brum-de-oliveira-6808a8205/">
+                        <a 
+                        target="_blank"
+                        href="https://www.linkedin.com/in/lucas-comparssi-brum-de-oliveira-6808a8205/">
                             <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M25.1463 0.71875H2.85371C1.675 0.71875 0.71875 1.675 0.71875 2.85371V25.1463C0.71875 26.325 1.675 27.2812 2.85371 27.2812H25.1463C26.325 27.2812 27.2812 26.325 27.2812 25.1463V2.85371C27.2812 1.675 26.325 0.71875 25.1463 0.71875V0.71875ZM25.1463 25.1562C10.2779 25.1529 2.84375 25.1496 2.84375 25.1463C2.84707 10.2779 2.85039 2.84375 2.85371 2.84375C17.7221 2.84707 25.1562 2.85039 25.1562 2.85371C25.1529 17.7221 25.1496 25.1562 25.1463 25.1562ZM4.65664 10.6764H8.59785V23.3533H4.65664V10.6764ZM6.62891 8.94316C7.8873 8.94316 8.91328 7.92051 8.91328 6.65879C8.91328 6.3588 8.85419 6.06175 8.73939 5.7846C8.62459 5.50744 8.45633 5.25562 8.2442 5.04349C8.03208 4.83137 7.78025 4.6631 7.5031 4.5483C7.22595 4.4335 6.92889 4.37441 6.62891 4.37441C6.32892 4.37441 6.03187 4.4335 5.75471 4.5483C5.47756 4.6631 5.22573 4.83137 5.01361 5.04349C4.80149 5.25562 4.63322 5.50744 4.51842 5.7846C4.40362 6.06175 4.34453 6.3588 4.34453 6.65879C4.34121 7.92051 5.36387 8.94316 6.62891 8.94316ZM15.0061 17.0812C15.0061 15.4277 15.3215 13.8273 17.3701 13.8273C19.3889 13.8273 19.4188 15.7166 19.4188 17.1875V23.3533H23.3566V16.4006C23.3566 12.9873 22.6195 10.3609 18.6318 10.3609C16.716 10.3609 15.4311 11.4135 14.9031 12.4096H14.85V10.6764H11.0682V23.3533H15.0061V17.0812Z" fill="white"/>
                                 </svg>
@@ -69,14 +75,14 @@
                     </li>
                 </ul>
             </div>
-            <button class="open-menu">
+            <button class="open-menu" onclick="openMenu()">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10 20H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M10 12H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M18 28L30 28" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </button>
-            <button class="close-menu">
+            <button class="close-menu" onclick="closeMenu()">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M30 10L10 30M10 10L30 30" stroke="#FFFAF1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>                    
