--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DoctorCare</title>
 </head>
-<body onscroll="onScroll()" class="menu-expanded">
+<body onscroll="onScroll()" class="">
 
     <nav id="navigation" class="scroll">
         <div class="wrapper">
