i fixed the css problems

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                     <li>
                         <a href="#">Sobre</a>
                     </li>
-                </ul>
+                
                 <a class="button" href="#">Agende sua consulta</a>
+                </ul>
                 <ul class="social-links">
                     <li>
                         <a 
@@ -92,7 +93,7 @@
     </nav>
     <header class="wrapper">
     <h4>
-        BOAS-VINDAS A DOCTORCARE
+        BOAS-VINDAS A DOCTORCARE 👋
     </h4>
     <h1>Assistência médica simplificada para todos</h1>
     <p>
