--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="#">Início</a>
+                        <a onclick="closeMenu()" href="#home">Início</a>
                     </li>
                     <li>
-                        <a href="#">Serviços</a>
+                        <a onclick="closeMenu()" href="#services">Serviços</a>
                     </li>
                     <li>
                         <a href="#">Sobre</a>
@@ -91,7 +91,7 @@
 
         </div>
     </nav>
-    <header class="wrapper">
+    <header id="home" class="wrapper">
     <h4>
         BOAS-VINDAS A DOCTORCARE 👋
     </h4>
@@ -123,6 +123,60 @@
             </div>
         </div>
     </header>
+
+    <section id="services">
+        <div class="wrapper">
+             
+            <header>
+                <h4>Serviços</h4>
+                <h2> Como Podemos ajudá-lo a se sentir melhor?</h2>
+            </header>
+
+            <div class="cards">
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Problemas digestivos
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Problemas digestivos
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Problemas digestivos
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+            </div>
+
+
+        </div>
+    </section>
 
         <!--- unsplash service to images --->
         <script src="main.js">
