--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DoctorCare</title>
 </head>
-<body onload="onOpen()" onscroll="onScroll()">
-
+<body  onscroll="onScroll()">
     <nav id="navigation" >
         <div class="wrapper">
             <a class="logo" href="#home">
@@ -138,6 +137,7 @@
             </header>
 
             <div class="cards">
+                
                 <div class="card">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
@@ -157,7 +157,7 @@
                         <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <h3>
-                            Problemas digestivos
+                            Saude Hormonal
                         </h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
@@ -170,7 +170,46 @@
                         <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <h3>
-                            Problemas digestivos
+                            Bem-estar mental
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Cuidados pediátricos
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Autoimune e inflamação
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
+                        </p>
+                </div>
+
+                <div class="card">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="12" cy="12" r="12" fill="#DCE9E2"/>
+                        <path d="M17.091 8.18182L10.091 15.1818L6.90918 12" stroke="#00856F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>
+                            Saúde do Coração
                         </h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem ad adipisci! Esse iure iusto quas facilis, temporibus quasi. Recusandae accusamus consequatur repudiandae nemo unde nihil asperiores quidem? Enim, earum.
@@ -183,7 +222,10 @@
         </div>
     </section>
 
-
+    <div class="notification">
+        <p>Welcome to DoctorCare</p>
+        <span class="progress"></span>
+    </div>
 
         <!--- unsplash service to images --->
         <script src="https://unpkg.com/scrollreveal"></script>
