--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DoctorCare</title>
 </head>
-<body  onscroll="onScroll()">
+<body >
     <nav id="navigation" >
         <div class="wrapper">
             <a class="logo" href="#home">
@@ -340,7 +340,7 @@
         </div>
     </footer>
 
-    <a id="backToTopButton" href="#home">
+    <a id="backToTopButton"  href="#home">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="20" cy="20" r="20" fill="#00856F"/>
             <path d="M20 27V13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
